--- a/index.html
+++ b/index.html
@@ -1,57 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-<meta charset="UTF-8">
-<title>Zahlen-Rätsel 🧩</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Zahlen-Rätsel — (Reload Debug)</title>
 <style>
-body {
-  font-family: Arial;
-  background: #0f172a;
-  color: #fff;
-  text-align: center;
-  padding: 40px;
-}
-h1 { color: #38bdf8; }
-input, button {
-  padding: 10px;
-  margin: 8px;
-  border-radius: 8px;
-  border: none;
-  font-size: 16px;
-}
-input { width: 80px; text-align: center; }
-button {
-  background-color: #3b82f6;
-  color: #fff;
-  cursor: pointer;
-}
-button:hover { background-color: #2563eb; }
-#info, #hint, #result {
-  margin-top: 15px;
-  font-size: 18px;
-}
-#langBtn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background: #1e293b;
-  color: white;
-  border-radius: 8px;
-}
+  body{font-family:Arial;background:#0f172a;color:#fff;text-align:center;padding:30px}
+  h1{color:#38bdf8}
+  input,button{padding:10px;margin:8px;border-radius:8px;border:none;font-size:16px}
+  #statusBox{margin-top:12px;padding:10px;border-radius:8px;background:#111827;color:#fff}
+  #reloadNotice{margin-top:12px;color:#ffd166;font-weight:bold}
 </style>
 </head>
 <body>
-<button id="langBtn">🇩🇪 Deutsch</button>
-<h1 id="title">🔢 Zahlen erraten</h1>
-<p id="rangeText">Lade Einstellungen...</p>
-<input type="number" id="guess" placeholder="Zahl">
-<button id="guessBtn">Raten</button>
-<p id="hint"></p>
-<p id="info"></p>
-<p id="result"></p>
+  <h1>🔢 Zahlen erraten</h1>
+  <p id="rangeText">Lade Einstellungen…</p>
+  <input type="number" id="guess" placeholder="Zahl">
+  <button id="guessBtn">Raten</button>
+  <div id="statusBox">Status: bereit</div>
+  <div id="reloadNotice" style="display:none">Admin fordert Reload — Seite wird neu geladen…</div>
 
 <script type="module">
+// Imports (wichtig: onValue ist importiert)
 import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
 import { getDatabase, ref, get, onValue } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-database.js";
 
@@ -68,163 +38,103 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const db = getDatabase(app);
 
-const guessInput = document.getElementById("guess");
-const guessBtn = document.getElementById("guessBtn");
-const info = document.getElementById("info");
-const hint = document.getElementById("hint");
-const result = document.getElementById("result");
+// UI
 const rangeText = document.getElementById("rangeText");
-const title = document.getElementById("title");
-const langBtn = document.getElementById("langBtn");
+const statusBox = document.getElementById("statusBox");
+const reloadNotice = document.getElementById("reloadNotice");
 
-let lang = "de";
+// Spiel-variablen (vereinfachte Version)
 let settings = {};
 let currentNumber = 0;
 let attemptsLeft = 0;
 
-// Sprachtexte
-const texts = {
-  de: {
-    title: "🔢 Zahlen erraten",
-    placeholder: "Zahl",
-    guessBtn: "Raten",
-    loading: "Lade Einstellungen...",
-    range: (min, max) => `Errate die Zahl zwischen ${min} und ${max}`,
-    tooHigh: "📉 Zu hoch!",
-    tooLow: "📈 Zu niedrig!",
-    wrong: "❌ Falsch!",
-    correct: "🎉 Richtig! Du wirst weitergeleitet...",
-    noTries: (num) => `❌ Keine Versuche mehr! Die richtige Zahl war ${num}.`,
-    triesLeft: (num) => `Noch ${num} Versuche.`,
-    invalid: "⚠️ Bitte gib eine gültige Zahl ein!"
-  },
-  en: {
-    title: "🔢 Guess the Number",
-    placeholder: "Number",
-    guessBtn: "Guess",
-    loading: "Loading settings...",
-    range: (min, max) => `Guess the number between ${min} and ${max}`,
-    tooHigh: "📉 Too high!",
-    tooLow: "📈 Too low!",
-    wrong: "❌ Wrong!",
-    correct: "🎉 Correct! Redirecting...",
-    noTries: (num) => `❌ No tries left! The correct number was ${num}.`,
-    triesLeft: (num) => `${num} tries left.`,
-    invalid: "⚠️ Please enter a valid number!"
-  }
-};
+// Hilfsfunktion: setze Status sichtbar
+function setStatus(text){
+  statusBox.textContent = "Status: " + text;
+}
 
-// Sprachumschalter
-langBtn.onclick = () => {
-  lang = lang === "de" ? "en" : "de";
-  langBtn.textContent = lang === "de" ? "🇩🇪 Deutsch" : "🇬🇧 English";
-  applyLanguage();
-};
-
-function applyLanguage() {
-  title.textContent = texts[lang].title;
-  guessInput.placeholder = texts[lang].placeholder;
-  guessBtn.textContent = texts[lang].guessBtn;
-  if (settings.minNumber) {
-    rangeText.textContent = texts[lang].range(settings.minNumber, settings.maxNumber);
-  } else {
-    rangeText.textContent = texts[lang].loading;
+// Lade Einstellungen (und starte Spiel)
+async function loadSettings(){
+  try{
+    const snap = await get(ref(db, "settings"));
+    console.log("settings.exists:", snap.exists(), " value:", snap.val());
+    if(snap.exists()){
+      settings = snap.val();
+      rangeText.textContent = `Errate die Zahl zwischen ${settings.minNumber} und ${settings.maxNumber}`;
+      startGame();
+      setStatus("Einstellungen geladen");
+    } else {
+      rangeText.textContent = "❌ Einstellungen nicht gefunden (Pfad: settings)";
+      setStatus("Einstellungen fehlen");
+    }
+  } catch(e){
+    console.error("Fehler loadSettings:", e);
+    rangeText.textContent = "❌ Fehler beim Laden der Einstellungen";
+    setStatus("Fehler beim Laden");
   }
 }
 
-// Einstellungen laden
-async function loadSettings() {
-  const snapshot = await get(ref(db, "settings"));
-  if (snapshot.exists()) {
-    settings = snapshot.val();
-    applyLanguage();
-    resetGame();
-  } else {
-    rangeText.textContent = texts[lang].loading;
-  }
-}
-
-// Spiel zurücksetzen
-function resetGame() {
+function startGame(){
   const min = settings.minNumber || 1;
   const max = settings.maxNumber || 50;
   const isRandom = settings.randomNumber;
-  currentNumber = isRandom
-    ? Math.floor(Math.random() * (max - min + 1)) + min
-    : Number(settings.fixedNumber) || 10;
+  currentNumber = isRandom ? Math.floor(Math.random()*(max-min+1))+min : Number(settings.fixedNumber)||10;
   attemptsLeft = settings.maxAttempts || 5;
-  info.textContent = texts[lang].triesLeft(attemptsLeft);
-  hint.textContent = "";
-  result.textContent = "";
-  guessInput.disabled = false;
-  guessBtn.disabled = false;
 }
 
-// Rateversuch
-guessBtn.onclick = () => {
-  const guess = Number(guessInput.value);
-  if (!guess) {
-    hint.textContent = texts[lang].invalid;
-    return;
-  }
-
-  attemptsLeft--;
-  const isRandom = settings.randomNumber;
-
-  if (guess === currentNumber) {
-    result.textContent = texts[lang].correct;
-    setTimeout(() => window.location.href = "anfrage.html", 1000);
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
-    return;
-  }
-
-  if (attemptsLeft <= 0) {
-    result.textContent = texts[lang].noTries(currentNumber);
-    guessInput.disabled = true;
-    guessBtn.disabled = true;
-    return;
-  }
-
-  // Wenn feste Zahl, dann sagen ob zu hoch oder zu niedrig
-  if (!isRandom) {
-    if (guess > currentNumber) hint.textContent = texts[lang].tooHigh;
-    else hint.textContent = texts[lang].tooLow;
-  } else {
-    hint.textContent = texts[lang].wrong;
-  }
-
-  info.textContent = texts[lang].triesLeft(attemptsLeft);
-
-  if (isRandom) {
-    const min = settings.minNumber || 1;
-    const max = settings.maxNumber || 50;
-    currentNumber = Math.floor(Math.random() * (max - min + 1)) + min;
-  }
-};
-
-// 🔄 Reload Listener (Admin-Button)
+// ---- Robust Reload-Listener ----
+// Wir hören auf reloadFlag/time. Vergleich als STRING, damit types keine Probleme machen.
+// firstSeen speichert initialen Zeitwert — beim ersten Empfang soll nicht neu geladen werden.
 const reloadRef = ref(db, "reloadFlag/time");
-let firstLoad = true;
+let firstSeen = null;
 
-onValue(reloadRef, (snap) => {
-  if (!snap.exists()) return;
-  const newTime = snap.val();
-  const lastReload = localStorage.getItem("lastReloadTime");
-
-  if (firstLoad) {
-    firstLoad = false;
-    localStorage.setItem("lastReloadTime", newTime);
+onValue(reloadRef, (snapshot) => {
+  // Wenn kein Wert vorhanden: nichts tun
+  if(!snapshot.exists()){
+    console.log("reloadFlag/time nicht vorhanden");
     return;
   }
 
-  if (newTime && newTime !== lastReload) {
-    localStorage.setItem("lastReloadTime", newTime);
-    location.reload();
+  // Konvertiere in String (sicher gegen number/string Unterschiede)
+  const newTimeRaw = snapshot.val();
+  const newTimeStr = String(newTimeRaw);
+  const lastStored = localStorage.getItem("lastReloadTime");
+
+  console.log("onValue reloadFlag/time:", newTimeRaw, " lastStored:", lastStored, " firstSeen:", firstSeen);
+
+  // Wenn das der erste Empfang ist (erste Seite-Messung), merken wir ihn, aber reloaden nicht
+  if(firstSeen === null){
+    firstSeen = newTimeStr;
+    // Falls localStorage leer, setzen wir ihn — das verhindert direktes Reloaden beim ersten load.
+    if(!lastStored){
+      localStorage.setItem("lastReloadTime", newTimeStr);
+      console.log("Initial lastReloadTime gesetzt ->", newTimeStr);
+    }
+    return;
+  }
+
+  // Vergleich mit lokal gespeicherter Zeit (string)
+  const lastReload = localStorage.getItem("lastReloadTime") || "";
+  if(newTimeStr !== lastReload){
+    // Sichtbares Feedback (hilft auf Handy ohne Konsole)
+    reloadNotice.style.display = "block";
+    reloadNotice.textContent = "Admin fordert Reload — Seite wird neu geladen…";
+
+    // Update localStorage direkt (verhindert double-reload loops)
+    localStorage.setItem("lastReloadTime", newTimeStr);
+
+    // kurze Verzögerung, damit Nutzer die Meldung sieht (optional)
+    setTimeout(()=> {
+      location.reload();
+    }, 600);
+  } else {
+    console.log("reloadFlag/time hat sich nicht geändert (neu==gespeichert)");
   }
 });
 
-// Start
+// Utility: Entwicklerhilfe — falls du testen willst, kannst du localStorage zurücksetzen:
+// localStorage.removeItem("lastReloadTime"); setStatus("localStorage zurückgesetzt");
+
 loadSettings();
 </script>
 </body>
